Attempted to fix second scrollbar

--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ header h3 {
     flex-wrap: wrap;
     overflow: auto;
     max-width: 100%;
+    overflow-y: hidden;
 }
 
 .about-block {
